--- a/活用数据-驱动业务数据分析/概要.md
+++ b/活用数据-驱动业务数据分析/概要.md
@@ -1,6 +1,7 @@
 # 概要
 - 业务驱动
-业务需求决定了数据分析要研究的问题，是数据分析的目的和价值体现。
+
+    业务需求决定了数据分析要研究的问题，是数据分析的目的和价值体现。
 - 数据分析具有哪些业务需求？
 - 满足这些业务需求需要哪些数据分析专题？
 
@@ -26,4 +27,10 @@
 
 - 思维先导
 
-- 为满足这项业务需求你需要 分析哪些内容
+- 为满足这项业务需求你需要 分析哪些内容？
+- 这些内容分析到什么程度，才能满足业务需求？
+
+通过提问，模型，结构化思维方法将抽象的业务需求转化为具体的分析内容。
+分析视角，从对比，分类，相关描述等多个视角入手增加数据分析深度，提升数据分析价值
+
+
