--- a/商务与经济统计/表格与图形.md
+++ b/商务与经济统计/表格与图形.md
@@ -3,11 +3,22 @@
 - 频数分布是一种数据的表格形式的汇总，表示在几个互不重叠组别中每一组所含观察值的数目（频数）
 - 相对频数分布 是所属类别的元素个数分别占总数的比例
 
-        每组的相对频数=魅族的频数 / N (一个有N个观察值的数据集 )
+        每组的相对频数=每组的频数 / N (一个有N个观察值的数据集 )
 
         百分比频数 = 相对频数*100
+
+        近似组距= （最大值-最小值） / 分组数量
     
 - 相对频数分布 是表示每一组相对频数数据的表格汇总。
 - 百分比频数分布 是每一组百分比频数数据的表格汇总。
 
+- 分类数据 用以标记每一类别的标签或名称
+- 数值型数据 表明大小或多少的数据
+- 频数分布 用表格来对数据加以概括，表示在若干互不重叠组中每组或每类观察值出现的次数（或数量）
+- 组中值 每个分组的上限和下限的中点
+- 累积频数分布 对数值型数据进行整理的一种表格方法，显示小于或者等于每组上限观察值的次数
+- 累积相对频数分布 对数值型数据进行整理的一种方法，显示小于或等于每组上限观察值的比例
+- 累积百分比频数分布 对数值型数据进行整理的一种方法显示小于或者等于每组上限观察值的百分比
+- 联列表 对两个变量进行概括的一种表格方法，其中一个变量的分组情况用行表示，一个分组情况用列表示
+- 
     
