--- a/商务与经济统计/数值方法_3.md
+++ b/商务与经济统计/数值方法_3.md
@@ -27,3 +27,17 @@
 - 重要公式 
 
     样本平均数，总体平均数，加权平均数，几何平均数，四分位距，总体方差，样本方差，标准差，变异系数，标准分（z-分数），样本协方差，总体协方差，皮尔逊积矩相关系数
+
+- 样本平均数
+
+    x=Σx(i) / n=(x1+x2+x3+...+xn) / n
+
+- 总体平均数
+
+    x=Σx(i) / N
+- 加权平均数
+
+    x=Σw(i)x(i) / Σw(i) w(i)代表第i个值的权重
+- 几何平均数
+
+    
