--- a/商务与经济统计/数值方法_3.md
+++ b/商务与经济统计/数值方法_3.md
@@ -40,4 +40,44 @@
     x=Σw(i)x(i) / Σw(i) w(i)代表第i个值的权重
 - 几何平均数
 
+    x=[(x1)(x2)...(xn)]（1/n）次方
+- 四分位距
+
+    IQR=Q3-Q1；
     
+    百分位数 i=(p/100)n p是所要求的百分位数，n是观察值个数
+
+    四分之一位数 （25/100）n  = Q1
+
+    四分之二位数 （50/100）n  = Q2
+
+    四分之三位数 （75/100）n  = Q3
+
+- 总体方差
+
+    x=Σ(x(i)-μ)（2）次方 / N  x(i)观察值 μ平均值
+
+- 样本方差
+
+    s=Σ(x(i)-μ)（2）次方 / n-1
+
+- 标准差 就是方差的平方根
+
+- 变异系数
+
+    (标准差/平均数 * 100)%
+- z分数 也叫标准分
+
+    zi=(xi-μ) / s  μ为平均数 s为标准差
+- 样本协方差
+
+    s(xy)=Σ(xi-xμ)(yi-yμ) / n-1
+- 总体协方差
+
+    s(xy)=Σ(xi-xμ)(yi-yμ) / N
+- 相关系数
+
+    r(xy)=s(xy) / s(x) * s(y)  s(xy)为样本协方差 sx为变量x的样本标准差，sy 为y的标准差
+
+
+
