--- a/JAVA基础/访问权限控制.md
+++ b/JAVA基础/访问权限控制.md
@@ -1,2 +1,7 @@
 # 访问权限控制
-
+- public protexted private
+- 默认访问权限 =  包访问权限
+- 访问权限的控制常被称为是具体实现的隐藏，把数据和方法包装进类中，以及具体实现的隐藏，常共同被称为封装
+- 每个编译单元都只能只有一个public
+- public 类的名称必须完全与含有该编译单元的文件名称相匹配
+-
