--- a/JAVA基础/接口和内部类.md
+++ b/JAVA基础/接口和内部类.md
@@ -18,4 +18,12 @@
 ## 内部类
 
 - 可以将一个类的定义放在另外一个类的定义内部，就是内部类 
-- 
+- 链接到外部类 内部类自动拥有对其外围类所有成员的访问权
+- 生成对外部类对象的引用使用.this 和 .new， 
+- 内部类与向上转型
+- 在方法和作用域内的内部类
+- 匿名内部类  - 与正规继承相比有些受限，因为匿名内部类既可以扩展类，也可以实现接口，但是两者不能兼备，而且如果实现接口，也只能实现一个
+- 嵌套类 内部类声明成static 
+ - 内部类的 闭包与回调
+ - 内部类与控制框架
+ 
