--- a/JAVA虚拟机/虚拟机笔记.md
+++ b/JAVA虚拟机/虚拟机笔记.md
@@ -28,3 +28,22 @@
 
 ## 理解基本汇编运算 步骤 汇编程序 1+2=3 具体过程
 ## 理解C语言 1+2=3 具体过程 
+
+## JVM执行机器码
+java 字节码指令直接对应一段特定逻辑的本地机器码，而JVM在解释执行JAVA字节码指令时，会直接调用字节码指令所对应的本地机器码，而JVM在解释执行JAVA字节码指令时，会直接调用字节码指令所对应的本地机器码。JVM要执行机器码就相当于用C C++ 语言直接执行机器码，这种技术的实现关键就是 指针
+
+## 函数指针 与 指针函数
+- 指针函数 就是一个一般的函数 返回类型是一个指针
+- 函数指针 声明的是一个指针 指向一个函数的首地址
+
+```c
+//声明指针函数
+int *add(int a,int b)
+//声明函数指针
+int (*addPointer)(int a,int b);
+addPointer = add;
+int c = (*addPointer)(a,b)
+```
+## CallStub 函数指针
+
+
