--- a/JAVA虚拟机/虚拟机笔记.md
+++ b/JAVA虚拟机/虚拟机笔记.md
@@ -46,4 +46,16 @@ int c = (*addPointer)(a,b)
 ```
 ## CallStub 函数指针
 
+### CallStub八个参数
+    - link 连接器 在java函数的调用者与被调用者之间建立的联系
+    - result_val_address 函数返回值地址
+    - result_type 函数返回类型
+    - method() JVM内部所表示的JAVA方法对象
+    - entry_point
+    - parameters() java方法入参集合
+    - size_of_parameters() java方法的入参数量
+    - CHECK 当前线程对象
+
+JVM 首先调用 call_stub()函数，返回 _call_stub_entry,然后将这个_call_stub_entry 强制转换成CallStub这种自定义的函数指针类型，最终JVM调用这一函数指针，实现C程序到机器指令的过程
+
 
