--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -15,3 +15,15 @@
     - 对于同步方法块，锁是括号里配置的对象
 
 - 偏向锁，轻量级锁，重量级锁
+
+## JVM内存基础
+
+JAVA 采用的是共享内存模型，通信总是隐式的
+
+JMM（JAVA内存模型）定义了线程和主内存之间的抽象关系，线程之间的共享变量存储在主内存当中，每一个线程都有自己私有的本地内存，本地内存存储了共享变量的副本
+
+## volatile
+
+当读取一个volatile变量时，JMM会把该线程对应的本地内置内存设置为无效，线程接下来将从主内存中读取共享变量
+
+
