--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -66,3 +66,36 @@ public class shutdown{
 也可以通过synchronized 关键字 锁定同步块
 
 任意线程对Object (Object 由 synchronized保护) 的访问，首先要获得Object的监视器，如果获取失败，线程进入同步队列，线程状态变为BLOCKED ,当访问Object的前驱（获得了锁的线程）释放了锁，则该释放操作唤醒阻塞在同步队列中的线程，使其重新尝试对监视器的获取
+
+## 等待通知
+- notify() 通知一个在对象上等待的线程，使其从wait()方法返回 返回的前提是获得了锁
+- notifyAll() 通知所有等待在该对象上的线程
+- wait() 调用该方法的线程进入WAITING状态，同时释放对象的锁
+- wait(long) 超时等待一段时间
+- wait(long,int)
+
+一个线程A调用了对象O的wait()方法进入等待状态，而另外一个线程B调用了对象的notify()或者notifyAll()方法，线程A收到通知后从对象O的wait()方法返回
+
+### Thread.join() 就是等待通知的应用
+### ThreadLocal
+线程变量： 是一个以ThreadLocal对象为键，任意对象为值的存储结构，这个结构被附带在线程上面，也就是说一个线程可以根据一个ThreadLocal对象查询到绑定在这个线程上的一个值。
+
+通过SET()设置，通过GET()获取
+
+## 线程池技术
+
+简单的线程池接口
+```java
+public interface ThreadPool<Job extends Runnable>{
+    //执行一个JOB
+    void execute(Job job);
+    //关闭线程池
+    void shutdown();
+    //增加工作线程
+    void addWorkers(int num)
+    //减少工作线程
+    void removeWorkers(int num)
+    //得到正在等待的任务数量
+    int getJobSize();
+}
+```
