--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -99,3 +99,43 @@ public interface ThreadPool<Job extends Runnable>{
     int getJobSize();
 }
 ```
+## lock
+lock 特性：
+- 尝试非阻塞的获取锁
+- 能够被中断的获取锁
+- 超时的获取锁
+
+API:
+- void lock() 获取锁
+- void lockInterruptibly() 可中断的获取锁
+- Boolean tryLock() 尝试非阻塞的获取锁
+- Boolean trylock(long time,TimeUnit unit) 超时的获取锁
+- void unlock() 释放锁
+- Condition newCondition() 获取等待通知组件，该组件和当前的锁绑定
+
+## 队列同步器 AbstractQueuedSynchronizer
+- getState() 获取当前同步状态
+- setState() 设置当前同步状态
+- compareAndSetState(int except,int update) 使用CAS设置当前状态，该方法保证了状态设置的原子性
+
+同步器可以重现的方法
+
+- boolean tryAcquire(int arg) 独占试获取同步状态
+- boolean tryRelease(int arg) 独占试释放同步状态
+- int tryAcquireShared(int arg) 共享式获取同步状态，返回大于等于0的值表示获取成功
+- boolean tryReleaseShared(int arg) 共享式释放同步状态
+- boolean isHeldExclusively() 当前同步器是否在独占模式下被线程占用
+
+
+同步器提供的模板方法
+
+- void acquire(int arg) 
+- void acquireInterruptibly(int arg)
+- boolean tryAcquireNanos(int arg,long nanos)
+- void acquireShared(int arg)
+- void acquireSharedInterruptibly(int arg)
+- boolean trayAcquireSharedNanos(int arg,long nanos)
+- boolean release(int arg)
+- boolean releaseShared(int arg)
+- Collection<Thread> getQueuedThreads()获取等待同步队列上的线程集合
+
