--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -139,3 +139,119 @@ API:
 - boolean releaseShared(int arg)
 - Collection<Thread> getQueuedThreads()获取等待同步队列上的线程集合
 
+AQS 实战 实现一个同时只能允许两个线程访问的TwinsLock
+```java
+package com.tomihao.Base;
+
+
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.AbstractQueuedSynchronizer;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
+
+public class TwinsLock implements Lock {
+    private final Sync sync = new Sync(2);
+    private static final class Sync extends AbstractQueuedSynchronizer{
+        Sync(int count){
+            if(count<=0){
+                throw new IllegalArgumentException("大于0");
+            }
+            setState(count);
+        }
+        @Override
+        public int tryAcquireShared(int reduceCount){
+            for(;;){
+                int current = getState();
+                int newCount = current-reduceCount;
+                if(newCount<0 || compareAndSetState(current,newCount)){
+                    return newCount;
+                }
+            }
+        }
+        @Override
+        public boolean tryReleaseShared(int reduceCount){
+            for(;;){
+                int current = getState();
+                int newCount = current+reduceCount;
+                if(compareAndSetState(current,newCount)){
+                    return true;
+                }
+            }
+        }
+
+    }
+    @Override
+    public void lock(){
+        sync.acquireShared(1);
+    }
+    @Override
+    public void unlock() {
+        sync.releaseShared(1);
+    }
+
+    @Override
+    public void lockInterruptibly() throws InterruptedException {
+
+    }
+
+    @Override
+    public boolean tryLock() {
+        return false;
+    }
+
+    @Override
+    public boolean tryLock(long time, TimeUnit unit) throws InterruptedException {
+        return false;
+    }
+
+    @Override
+    public Condition newCondition() {
+        return null;
+    }
+}
+class Test{
+    public void Test() throws InterruptedException {
+        final Lock lock = new TwinsLock();
+        class Worker extends Thread{
+            @Override
+            public void run(){
+                while(true){
+                    lock.lock();
+                    try{
+                        Thread.sleep(1000);
+                        System.out.println(Thread.currentThread().getName());
+                        Thread.sleep(1000);
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    } finally {
+                        lock.unlock();
+                    }
+                }
+            }
+        }
+        for(int i=0;i<10;i++){
+            Worker w = new Worker();
+            w.setDaemon(true);
+            w.start();
+        }
+        for(int i=0;i<10;i++){
+            try {
+                Thread.sleep(1000);
+                System.out.println("-------------");
+            } catch (InterruptedException e){
+                e.printStackTrace();
+            }
+        }
+    }
+    public static void main(String[] args){
+        Test t = new Test();
+        try{
+            t.Test();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+    }
+}
+
+```
