多线程 读写锁

--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -255,3 +255,41 @@ class Test{
 }
 
 ```
+
+## 重入锁
+- 定义：
+
+支持重进入的锁，它表示该锁能够支持一个线程对资源的重复加锁，除此之外，该锁的还支持获取锁时的公平和非公平性的选择
+
+- synchronized关键字隐式的支持重入。
+- ReentrantLock虽然没像synchronized关键字一样隐式的重进入，但是在调用lock()方法的时候，已经获取到锁的线程，能够再次调用lock()而不被阻塞。
+- 公平锁会判断AQS队列中是否有前驱节点，如果有就不能获取锁
+
+## 读写锁
+- 允许多个线程同时读取，但是只允许一个线程去写
+- ReentrantReadWriteLock
+    - 支持公平性选择
+    - 支持重进入
+    - 支持锁降级
+    - int getReadLockCount() 返回当前读锁获取的次数，该次数不等于获取读锁的线程数
+    - int getReadHoldCount() 返回当前线程获取读锁的次数
+    - boolean is WriteLocked() 判断写锁是否被获取
+    - int getWriteHoldCount()  获取写锁 被获取的次数
+
+- 实现：
+    - 读写状态设计
+
+        在一个整型状态上维护多种状态，就一定要按位切割，将变量变成两部分，高16位表示读，低16位表示写。
+    - 写锁的获取和释放
+
+        写锁是一个支持重进入的排它锁，如果当前线程已经获取了写锁，则增加写状态，如果当前线程在获取写锁时，读锁已经被获取（读状态不为0）则当前线程进入等待状态。
+    - 读锁的获取和释放
+
+        读锁是一个支持重进入的共享锁
+    - 锁降级
+
+        锁降级是指 写锁降级为读锁，就是该线程当前已经拥有了写锁，在获取到读锁，随后释放写锁的过程。
+
+        锁降级中读锁的获取保证了数据的可见性
+
+## LockSupport 工具
