--- a/JAVA虚拟机/虚拟机笔记.md
+++ b/JAVA虚拟机/虚拟机笔记.md
@@ -58,4 +58,11 @@ int c = (*addPointer)(a,b)
 
 JVM 首先调用 call_stub()函数，返回 _call_stub_entry,然后将这个_call_stub_entry 强制转换成CallStub这种自定义的函数指针类型，最终JVM调用这一函数指针，实现C程序到机器指令的过程
 
+主要是要弄清楚 JVM 中 CallStub  call_stub例程 相关知识
+
+## JAVA数据结构和面向对象
+
+## java类型识别
+
+Class 字节码
 
