多线程AQS condition lockSupport

--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -293,3 +293,46 @@ class Test{
         锁降级中读锁的获取保证了数据的可见性
 
 ## LockSupport 工具
+ LockSupport 定义了一组的公共静态方法，提供了基本的线程阻塞和唤醒功能
+
+ - void park() 阻塞当前线程
+ - void parkNanos(long nanos) 阻塞当前线程不超过多少 秒
+ - void parkUntil(long deadline) 阻塞当前线程 直到deadline 时间
+ - void unpark() 唤醒当前线程
+
+## Condition 接口
+任意一个java对象，都拥有一组监视器方法 主要包括 wait(),wait(long timeout),notify() 以及 notifyAll() 方法，这些方法与 synchronized同步关键字配合，可以实现等待 通知模式，Condition 接口也提供了相关的功能，与lock配合可以实现等待 通知模式。Condition 对象是由 Lock对象调用newCondition()方法创建出来的换句话说Condition是依赖lock对象的。
+
+```java
+Lock lock = new RenntrantLock();
+Condition condition = lock.newCondition();
+
+public void conditionWait() throws InterruptedException{
+    lock.lock();
+    try{
+        condition.await();
+    } finally{
+        lock.unlock();
+    }
+}
+public void conditionSignal() throws InterruptedException{
+    lock.lock();
+    try{
+        condition.signal();
+    }finally(){
+        lock.unlock();
+    }
+}
+```
+
+
+- void await() 当前线程进入等待状态直到被通知(signal)或者中断
+- void awaitUninterruptibly() 当前线程进入等待状态直到被通知
+- long awaitNanos(long nanosTimeout) 当前线程进入等待状态，直到被通知，中断或者超时，返回值表示剩余的时间
+- boolean awaitUntil(Date deadline) 
+- signal() 唤醒一个等待在Condition 上的线程
+- signalAll() 唤醒所有等待在Condition上的线程
+
+Condition原理
+
+ConditionObject 是同步器AbstractQueuedSynchronizer 的内部类，因为Condition的操作需要获取相关联的锁，每个Condition 对象都包含着一个等待队列
