--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -336,3 +336,47 @@ public void conditionSignal() throws InterruptedException{
 Condition原理
 
 ConditionObject 是同步器AbstractQueuedSynchronizer 的内部类，因为Condition的操作需要获取相关联的锁，每个Condition 对象都包含着一个等待队列
+
+## JAVA 并发容器框架
+
+### ConcurrentHashMap 原理
+- 线程不安全的HashMap
+
+```java
+public class hashMapTest{
+    hashMapTest(){
+        final HashMap<String,String> map = new HashMap<String,String>(2);
+        Thread t = new Thread(new Runnable(){
+            @Override
+            public void run(){
+                for(int i=0;i<10000;i++){
+                    new Thread(new Runnable(){
+                        @Override
+                        public void run(){
+                            map.put(UUID.randomUUID().toString(),"");
+                        }
+                    },""ftf+i).start();
+                }
+            }
+        },"ftf");
+        t.start();
+        t.join();
+    }
+}
+```
+
+HashMap 在并发进行PUT操作的时候会引起死循环，是因为多线程导致HashMap的Entry链表形成环形结构，Entry 的 next 节点永远不为空。
+
+HashTable 使用了 synchronized 来保证线程安全，但是效率十分低
+
+ConcurrentHashMap 利用锁分段技术
+
+由Segment数组和HashEntry数组结构组成，Segment是一种重入锁，HashEntry则是用于存储键值对数据，是一种数组和链表结构，一个Segment 里包含一个HashEntry数组，每个HashEntry是一个链表结构的元素，每个Segment守护着一个HashEntry数组里的元素，当对HashEntry数组的数据进行修改的时候必须首先获取到对应的Segment锁。
+
+get操作：先经过一次再散列，然后使用这个散列值通过散列运算定位到Segment,在通过散列算法定位到元素。共享变量都定义成volatile类型，可以不加锁 多个线程快速读取
+
+put操作：首先定位到Segment 然后在Segment里进行插入操作，插入操作需要经历两个步骤，第一：判断是否需要对Segment里的HashEntry进行扩容，第二步定位添加元素的位置，然后将其放在HashEntry数组里面
+
+### 阻塞队列和非阻塞队列
+
+
