--- a/spring/容器的基本实现.md
+++ b/spring/容器的基本实现.md
@@ -39,4 +39,25 @@ BeanFactory bf=new XmlBeanFactory(new ClassPathResource("myxml.xml"));
 ```
 profile可以进行环境的配置
 
+## Spring 中核心类
+
+### DefaultListableBeanFactory
+
+xmlBeanFactory 继承自 DefaultListableBeanFactory,而DefaultListableBeanFactory是整个加载Bean的核心部分
+
+- DefaultListableBeanFactory->ConfigurableBeanFactory 是提供配置Factory的各种方法 -> ListableBeanFactory 根据各种条件获取Bean的配置清单 -> BeanFactory
+- DefaultListableBeanFactory -> AbstractAutowireCapableBeanFactory 综合 AbstractBeanFactory (综合了 FactoryBeanRegister  和 ConfigurableBeanFactory的功能) 并对接口Autowire CapableBeanFactory 进行了实现->ConfigurableListableBeanFactory(BeanFactory的配置清单，指定忽略类型及其接口)
+
+xmlBeanFactory 初始化时许图
+
+newClassPathResource("beanFactory.xml")-> Resource->new XmlBeanFactory(resource)->loadBeanDefinition(resource)->loadBeanDefinitionNum(int)->BeanFactory
+
+Spring配置文件是通过ClassPathResource进行封装的
+```java
+Resource resource = new ClassPathResource("BeanFactory.xml");
+InputStream inputstream = resource.getInputStream();
+```
+
+接下来当通过了Resource 相关类完成了对配置文件的封装后读取工作就交给了XmlBeanDefinitionReader 来处理
+
 
