--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -393,4 +393,187 @@ private transient volatile Node<E> tail = head;
 首先获取头节点的元素，然后判断头节点元素是否为空，如果为空，表示另外一个线程已经进行了一次出队操作将该节点的元素取走，如果不为空，则使用CAS的方式将头节点的引用设置为NULL 如果CAS成功则直接返回头节点，如果不成功表示另外一个线程已经进行了一次出队操作更新了head节点，导致元素发生了变化，需要重新获取头节点。
 
 ## java中的阻塞队列
+阻塞队列是一个支持两个附加操作的队列，这两个附加操作支持阻塞的插入和移除方法。
 
+JDK7 提供了7个基本阻塞队列
+
+- ArrayBlockingQueue
+
+    用数组实现的有界阻塞队列，默认情况下不保证线程的公平访问。
+- LinkedBlockingQueue
+
+    用链表实现的有界阻塞队列。
+- PriorityBlockingQueue
+
+    支持优先级的无界阻塞队列
+- DelayQueue
+
+    支持延时获取元素的无界阻塞队列
+- SynchronousQueue 
+
+    是一个不存储元素的阻塞队列
+- LinkedTransferQueue 
+
+    是一个由链表结构组成的无界阻塞队列
+- LinkedBlockingDeque
+
+    是一个由链表结构组成的双向阻塞队列
+
+## 阻塞队列的实现原理
+
+ArrayBLockingQueue 实现原理
+
+通过Conditon技术 使用通知模式来实现
+```java
+private final Condition notFull;
+private final Condition notEmpty;
+
+public ArrayBLockingQueue(int capacity,boolean fair){
+    notEmpty = lock.newCondition();
+    notFull = lock.newCondition();
+}
+public void put(E e) throws InterruptedException{
+    checkNotNUll(e);
+    final ReentrantLock lock = this.lock;
+    lock.lockInterruptibly();
+
+    try{
+        while(count == items.length)
+            notFull.await();
+        insert(e)
+    } finally{
+        lock.unlock();
+    }
+}
+
+public E take() throws InterruptedException{
+    final ReentrantLock lock = this.lock;
+    lock.lockInterruptibly();
+    try{
+        while(count ==0)
+            notEmpty.await();
+        return extract();
+    }finally{
+        lock.unlock();
+    }
+}
+
+private void insert(E x){
+    items[putIndex] = x;
+    putIndex = inc(putIndex);
+    ++count;
+    notEmpty.signal();
+}
+```
+
+## Fork / join 框架
+
+Fork就是把一个大任务切分成若干个小任务并行的执行，join就是合并这些子任务的执行结果，最后得到这个大任务的结果。
+
+### 工作窃取算法
+
+指的是某个线程从其他队列里窃取任务来执行。
+
+一般采用双端队列，一般的线程从头部拿取任务，尾端的为窃取的线程
+
+### Fork / join 的框架设计
+
+第一： 分割任务
+
+第二 ： 执行任务并合并结果集
+
+使用Fork join框架
+
+```java
+public class CountTask extends RecursiveTask<Intger>{
+    private static final int THRESHOLD = 2; // 阈值 分成几个任务
+    private int start;
+    private int end;
+    public CountTask(int start,int end){
+        this.start=start;
+        this.end = end;
+    }
+
+    @Override
+    protected Integer compute(){
+        int sum =0;
+        //如果任务足够小就计算任务
+        boolean canCompute = (end-start)<= THRESHOLD; 
+        if(canCompute){
+            for(int i=start;i<=end;i++){
+                sum += i;
+            }
+        }else{
+            //如果任务大于阈值 就分裂成两个任务
+            int middle=(start+end)/2;
+            CountTask leftTask = new CountTask(start,middle);
+            CountTask rightTask = new CountTask(middle+1,end);
+            //执行子任务
+            leftTask.fork();
+            rightTask.fork();
+            //等待子任务执行完成
+            int leftResult = leftTask.join();
+            int rightRsult = rightTask.join();
+            //合并子任务
+            sum = leftResult+rightResult;
+        }
+
+        return sum;
+    }
+
+    public static void main(String[] args){
+        ForkJoinPool forkjoinpool = new ForkJoinPool();
+        //生成一个计算任务
+        CountTask task = new CountTask(1,4);
+        Future<Integer> result = forkjoinpool.submit(task);
+
+        if(task.isCompletedAbnormally()){
+            //异常处理
+            task.getException();
+        }
+
+        try{
+            result.get();
+        }catch(InterruptedException e){}catch(ExecutionExceeption e){}
+    }
+}
+```
+Fork join 框架实现原理
+
+ForkJoinPool 由ForkJoinTask 数组，和ForkJoinWorkerThrad数组组成，ForkJoinTask数组负责将存放程序提交给ForkJoinPool的任务，而ForkJoinWorkerThrad数组负责执行这些任务。
+
+- ForkJoinTask 的fork 原理
+
+    ```java
+    public final ForkJoinTask<V> fork(){
+        ((ForkJoinWorkerThread) Thread.currentThread()).pushTask(this);
+        return this;
+    }
+    //pushTask方法把当前任务存放在 ForkJoinTask数组队列里面，随后调用ForkJoinPool的signalWork()方法 来叫一个线程来执行
+
+    final void pushTask(ForkJoinTask<?> t){
+        ForkJoinTask<?>[] q;int s,m;
+        if((q = queue) != null){
+            .....
+            pool.signalWork();
+        }
+    }
+
+    ```
+
+- ForkJoinTask join 实现原理
+
+    join方法主要作用就是阻塞当前线程并等待结果。
+
+    ```java
+    public final V join(){
+        if(doJoin()!=NORMAL){
+            return reportReesult()
+        }else{
+            return getRawResult()
+        }
+    }
+    //doJoin方法里 首先通过查看任务状态，看任务是否已经执行完成，如果执行完成，则直接返回任务状态，否则从任务数组里面取出任务并执行
+    ```
+
+## JAVA中的原子操作类
