add exchanger semaphore CountDownLatch CyclicBarrier

--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -577,3 +577,183 @@ ForkJoinPool 由ForkJoinTask 数组，和ForkJoinWorkerThrad数组组成，ForkJ
     ```
 
 ## JAVA中的原子操作类
+java.util.concurrent.atomic包下面一共提供了13个类，属于4种类型的原子更新方式，原子更新基本问题，原子更新数组，原子更新引用，原子更新属性。
+
+### 原子更新基本类型
+
+- AtomicBoolean
+- AtomicIntegere
+- AtomicLong
+- AtomicIntegerArray
+- AtomicLongArray
+- AtomicReferenceArray
+- AtomicReference
+- AtomicReferenceFileUpdater
+- AtomicMarkableReference
+
+## java中的并发工具类
+
+- CountDownLatch 并发流程控制
+- CyclicBarrier 并发流程控制
+- Semaphore  并发流程控制
+- Exchanger 线程间交换数据
+
+### CountDownLatch
+- 允许一个或者多个线程等待其他线程完成操作、
+
+在这之前一直是用join方法替代的 ，join是用于让当前执行线程等待join线程执行结束。
+
+现在CountDownLatch也可以实现join的功能，并且比Join功能更多
+```java
+//以前的join解决方案
+public class JoinCountDownLatchTest{
+    public static void main(String[] args) throws InterruptedException{
+        Thread parser1 = new Thread(new Runnable()){
+            @Override
+            public void run(){
+                //do something
+            }
+        }
+        Thread parser2 = new Thread(new Runnable()){
+            @Override
+            public void run(){
+                //do something
+            }
+        }
+        parser1.start();
+        parser2.start();
+        parser1.join();
+        parser2.join();
+    }
+}
+//CountDownLatch解决方案
+public class CountDownLatchTest{
+    static CountDownLatch c = neew CountDownLatch(2);
+    public static void main(String[] args) throw InterruptedException{
+        new Thread(new Runnable(){
+            @Override
+            public void run(){
+                System.out.println(1)
+                c.countDown();
+                System.out.println(2)
+                c.countDown();
+            }
+        }).start();
+        c.await();
+        System.out.println(3)
+    }
+}
+```
+
+### CyclicBarrier
+
+字面上的意思就是可以循环使用的屏障。它要做的事情就是 让一组线程到达一个屏障，也可以说是 同步点，时被阻塞，直到最后一个线程到达屏障的时候，屏障才会开门，所有被屏障拦截的线程才会继续的运行。
+
+```java
+public class CyclicBarrierTest{
+    static CyclicBarrier c = new CyclicBarrier(2);
+    public static void main(String[] args){
+        new Thread(new Runnable(){
+            @Override
+            public void run(){
+                try{
+                    c.await();
+                }catch(Exception e){
+
+                }
+                print(1)
+            }
+        }).start();
+
+        try{
+            c.await();
+        }catch(Exception e){
+
+        }
+        print(2 )
+    }
+}
+```
+
+### Semaphore
+
+信号量，是用来控制同时访问特定资源的线程数量，它通过协调各个线程，以保证合理的使用公共资源。
+
+主要用于做流量的控制，特别是公用资源有限的应用场景，比如数据库的连接。
+
+```java
+public class SemaphoreTest{
+    private static final int Thread_count = 30;
+    private static ExecutorServicethreadPool = Excutors.newFixedThreadPool(Thread_count);
+
+    private static Semaphore s = new Semaphore(10);
+
+    public static void main(String[] args){
+        for(int i=0;i<Thread_count>;i++){
+            threadPool.execute(new Runnable(){
+                @Override
+                public void run{
+                    try{
+                        s.acquire();
+                        print("save data");
+                        s.release()
+                    }catch(InterruptedEException e){
+
+                    }
+                }
+            })
+        }
+        threadPool.shutdown();
+    }
+}
+```
+
+- acquire() 允许获取一个许可证
+- release() 归还许可证
+- intavailablePermits() 返回此信号量中当前可用的许可证数量
+- intgetQueueLength() 返回正在等待获取许可证的线程数量
+- booleanhasQueuedThreads(); 是否有线程正在等待获取许可证。
+- void reducePermits(int reduction) 减少reduction个许可证，是个protected方法。
+- Collection getQueuedThreads(); 返回所有等待获取许可证的线程集合，是个protected方法
+
+
+### Exchanger
+
+Exchanger是一个用于线程间协作的工具类，Exchanger 用于进行线程间的数据交换，它提供了一个同步点，在这个同步点，两个线程可以交换彼此的数据，这两个线程通过exchange方法交换数据，如果一个线程先执行exchang()方法，它会一直等待第二个线程执行exchange方法，当两个线程都到达了同步点的时候，这两个线程就可以交换数据了，将本线程生产出来的数据传递给对方。
+
+```java
+public class ExchangeerTest{
+    private static final Exchanger<String> exgr = new Exchanger<String>();
+    private static ExecutorServicethreadPool = Executors.newFixedThreadPool(2);
+
+    public static void main(String[] args){
+        threadPool.execute(new Runnable(){
+            @Override
+            public void run(){
+                try{
+                    String A = "银行流水A";
+                    exgr.exchanger(A);
+                }catch(InterruptedException e){
+
+                }
+            }
+        });
+        threadPool.execute(new Runnable(){
+            @Override
+            public void run(){
+                try{
+                    String B = "银行流水B"；
+                    String A = exgr.exchange("B");
+                    print("a 和 b的数据是否一致")
+                }catch(InterruptedException e){}
+            }
+        })
+        threadPool.shutdown();
+    }
+}
+```
+如果两个线程有一个没有执行exchange()方法，则会一直等待，你也可以设置一个超时时间
+exchange(V x,longtimeout,TimeUnit unit);
+
+
+## JAVA中的线程池
