--- a/JAVA基础/多线程.md
+++ b/JAVA基础/多线程.md
@@ -757,3 +757,49 @@ exchange(V x,longtimeout,TimeUnit unit);
 
 
 ## JAVA中的线程池
+
+线程池的创建
+```java
+new ThreadPoolExecutor(corePoolSize,maximumPoolSize,keepAliveTime,milliseconds,runnableTakQueue,handler)
+```
+- corePoolSize:线程池的基本大小 
+- maximumPoolSize: 最大线程数
+- runnableTaskQueue:任务队列，用于保存等待执行的任务阻塞队列。
+    - ArrayBlockingQueue  是一个基于数组结构的有界队列
+    - LinkedBlockingQueue  一个基于链表结构的阻塞队列
+    - SynchronousQueue  一个不存储元素的阻塞队列
+    - PriorityBlockingQueue 一个具有优先级的无限阻塞队列
+- RejectedExecutionHandler(饱和策略) JDK提供了4种策略
+    - AbortPolicy 直接抛出异常
+    - CallerRunsPolicy 只用调用者所在线程来运行任务
+    - DiscardOldestPolicy 丢弃队列里最近的一个任务，并执行当前任务
+    - DiscardPolicy 不处理，丢弃掉
+- keepAliveTime 线程活动保持时间
+- TimeUnit 线程活动保持时间的单位
+
+### 向线程池提交任务
+分别为 execute(),submit()
+
+execute()没有返回值，而 submit()会返回一个future类型的对象通过这个future对象可以判断任务是否执行成功
+
+### 关闭线程池
+可以通过调用shutdown shutdownNow 方法来关闭地图，原理是遍历线程池中的线程，然后逐个调用线程的interrupt方法 来中断线程。
+
+### Executor框架成员
+- ThreadPoolExecutor 
+- ScheduledThreadPoolExecutor
+- Future接口
+- Runnable接口
+- Callable接口
+- Executors
+
+### ThreadPoolExecutor
+通常使用工厂类 Executors 来创建
+- SingleThreadExecutors 单个线程 保证顺序的执行各任务，在任意时间点不会有多个线程是活动应用的场景
+- FixedThreadPool 为了满足资源管理的需求，而需要限制当前线程数量的应用场景
+- CachedThreadPool 大小无界的线程池，适用于执行很多的短期异步的小程序，或者是负载轻的服务器
+
+### ScheduledThreadPoolExecutor
+通常使用工厂类 Executors 来创建
+- ScheduledThreadPoolExecutor 包含若干个线程的 ScheduledThreadPoolExecutor
+- SingleThreadScheduledExecutor 只包含一个线程的 ScheduledThreadPoolExecutor
