--- a/spring/容器的功能扩展.md
+++ b/spring/容器的功能扩展.md
@@ -33,4 +33,23 @@ spring中提供了 ApplicationContext 用于扩展 BeanFactory
  - 在所有的注册的bean中查找 listener bean 注册到消息广播器中
  - 初始化剩下的单实例
  - 完成刷新过程，通知生命周期处理器 lifecycleProcessor 刷新过程 同时发出 contextRefreshEvent通知别人
- -
+
+
+## 加载BeanFactory
+- 创建DefaultListableBeanFactory
+- 指定序列化ID
+- 定制BeanFactory
+- 加载BeanDefinition
+- 使用全局变量记录BeanFactory类实例
+
+## 加载BeanDefinition
+ 已经初始化了DefaultListableBeanFactory 以后还需要 XmlBeanDefinitionReader 来读取XML。
+
+## ApplicationContext功能的扩展
+- 增加对SPEL语言的支持
+- 增加对属性编辑器的支持
+- 增加对一些内置类，比如EnviromentAware,MessageSourceAware 的信息注入
+- 设置依赖功能可忽略的接口
+- 注册一些固定依赖的属性
+- 增加对AspectJ的支持
+- 将相关环境变量及属性注册以单例的模式注册
