--- a/spring/容器的功能扩展.md
+++ b/spring/容器的功能扩展.md
@@ -53,3 +53,22 @@ spring中提供了 ApplicationContext 用于扩展 BeanFactory
 - 注册一些固定依赖的属性
 - 增加对AspectJ的支持
 - 将相关环境变量及属性注册以单例的模式注册
+
+## ApplicationContextAwareProcessor处理器
+ApplicationContextAwareProcessor 实现BeanPostProcessor接口，postProcessAfterInitialization和postProcessBeforeInitialization 方法。实现这些Aware接口的Bean再被初始化的时候可以获取相关的一些资源。
+
+## BeanFactory的后处理
+BeanFactory 作为Spring中容器功能的基础，用于存放所有已经加载的bean,为了保证程序上的高扩展性，spring 针对BeanFactory 做了大量的扩展，比如PostProcessor等都是在这里实现的。
+
+- 激活注册的BeanFactoryPostProcessor
+   BeanFactoryPostProcessor接口和BeanPostProcessor类似，可以对bean的定义(配置元数据)进行处理。也就是说SpringIoc 容器允许BeanFactoryPostProcessor在容器实际实例化任何其他的Bean之前读取配置的元数据，并可能修改。
+     
+- 注册BeanPostProcessor
+   spring中大部分功能都是通过后处理器的方式进行扩展的。
+
+   BeanFactoryPostProcessor 和 BeanPostProcessor 一种是通过硬编码的方式一种是通过配置文件来处理的
+- 初始化消息资源
+- 初始化ApplicationEventMulticaster
+- 注册监听器
+- 初始化非延迟加载单例
+- finishRefresh
